// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Artists /> renders A artists 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={10}
  >
    <div
      className="Artists"
    >
      <PageHeader
        bsClass="page-header"
      >
        Artists 
        <small>
          (
          1
           
          Artist
          )
        </small>
      </PageHeader>
      <div>
        <div
          className="filters"
        >
          <ul
            className="pagination pagination-sm"
          >
            <li
              onClick={[Function]}
            >
              <a>
                All
              </a>
            </li>
            <li
              className="active"
              key="0"
              onClick={[Function]}
            >
              <a>
                A
              </a>
            </li>
            <li
              key="1"
              onClick={[Function]}
            >
              <a>
                B
              </a>
            </li>
            <li
              key="2"
              onClick={[Function]}
            >
              <a>
                C
              </a>
            </li>
            <li
              key="3"
              onClick={[Function]}
            >
              <a>
                D
              </a>
            </li>
            <li
              key="4"
              onClick={[Function]}
            >
              <a>
                E
              </a>
            </li>
            <li
              key="5"
              onClick={[Function]}
            >
              <a>
                F
              </a>
            </li>
            <li
              key="6"
              onClick={[Function]}
            >
              <a>
                G
              </a>
            </li>
            <li
              key="7"
              onClick={[Function]}
            >
              <a>
                H
              </a>
            </li>
            <li
              key="8"
              onClick={[Function]}
            >
              <a>
                I
              </a>
            </li>
            <li
              key="9"
              onClick={[Function]}
            >
              <a>
                J
              </a>
            </li>
            <li
              key="10"
              onClick={[Function]}
            >
              <a>
                K
              </a>
            </li>
            <li
              key="11"
              onClick={[Function]}
            >
              <a>
                L
              </a>
            </li>
            <li
              key="12"
              onClick={[Function]}
            >
              <a>
                M
              </a>
            </li>
            <li
              key="13"
              onClick={[Function]}
            >
              <a>
                N
              </a>
            </li>
            <li
              key="14"
              onClick={[Function]}
            >
              <a>
                O
              </a>
            </li>
            <li
              key="15"
              onClick={[Function]}
            >
              <a>
                P
              </a>
            </li>
            <li
              key="16"
              onClick={[Function]}
            >
              <a>
                Q
              </a>
            </li>
            <li
              key="17"
              onClick={[Function]}
            >
              <a>
                R
              </a>
            </li>
            <li
              key="18"
              onClick={[Function]}
            >
              <a>
                S
              </a>
            </li>
            <li
              key="19"
              onClick={[Function]}
            >
              <a>
                T
              </a>
            </li>
            <li
              key="20"
              onClick={[Function]}
            >
              <a>
                U
              </a>
            </li>
            <li
              key="21"
              onClick={[Function]}
            >
              <a>
                V
              </a>
            </li>
            <li
              key="22"
              onClick={[Function]}
            >
              <a>
                W
              </a>
            </li>
            <li
              key="23"
              onClick={[Function]}
            >
              <a>
                X
              </a>
            </li>
            <li
              key="24"
              onClick={[Function]}
            >
              <a>
                Y
              </a>
            </li>
            <li
              key="25"
              onClick={[Function]}
            >
              <a>
                Z
              </a>
            </li>
            <li
              onClick={[Function]}
            >
              <FontAwesome
                name="search"
              />
            </li>
          </ul>
        </div>
        <VelocityTransitionGroup
          enter={
            Object {
              "animation": "slideDown",
              "complete": [Function],
              "duration": 250,
            }
          }
          enterHideStyle={
            Object {
              "display": "none",
            }
          }
          enterShowStyle={
            Object {
              "display": "",
            }
          }
          leave={
            Object {
              "animation": "slideUp",
              "duration": 250,
            }
          }
          runOnMount={false}
        />
      </div>
      <div
        className="Artist"
        key="1"
      >
        <Link
          replace={false}
          to="/artist/abc"
        >
          <h2>
            ABC
          </h2>
          <p />
          <span
            className="icon"
          >
            <FontAwesome
              name="music"
            />
             
            2
            <FontAwesome
              className="spacer-left-xs"
              name="comment-o"
            />
             
            50
          </span>
        </Link>
      </div>
    </div>
  </Col>
</Row>
`;

exports[`<Artists /> renders ABC search match 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={10}
  >
    <div
      className="Artists"
    >
      <PageHeader
        bsClass="page-header"
      >
        Artists 
        <small>
          (
          1
           
          Artist
          )
        </small>
      </PageHeader>
      <div>
        <div
          className="filters"
        >
          <ul
            className="pagination pagination-sm"
          >
            <li
              onClick={[Function]}
            >
              <a>
                All
              </a>
            </li>
            <li
              key="0"
              onClick={[Function]}
            >
              <a>
                A
              </a>
            </li>
            <li
              key="1"
              onClick={[Function]}
            >
              <a>
                B
              </a>
            </li>
            <li
              key="2"
              onClick={[Function]}
            >
              <a>
                C
              </a>
            </li>
            <li
              key="3"
              onClick={[Function]}
            >
              <a>
                D
              </a>
            </li>
            <li
              key="4"
              onClick={[Function]}
            >
              <a>
                E
              </a>
            </li>
            <li
              key="5"
              onClick={[Function]}
            >
              <a>
                F
              </a>
            </li>
            <li
              key="6"
              onClick={[Function]}
            >
              <a>
                G
              </a>
            </li>
            <li
              key="7"
              onClick={[Function]}
            >
              <a>
                H
              </a>
            </li>
            <li
              key="8"
              onClick={[Function]}
            >
              <a>
                I
              </a>
            </li>
            <li
              key="9"
              onClick={[Function]}
            >
              <a>
                J
              </a>
            </li>
            <li
              key="10"
              onClick={[Function]}
            >
              <a>
                K
              </a>
            </li>
            <li
              key="11"
              onClick={[Function]}
            >
              <a>
                L
              </a>
            </li>
            <li
              key="12"
              onClick={[Function]}
            >
              <a>
                M
              </a>
            </li>
            <li
              key="13"
              onClick={[Function]}
            >
              <a>
                N
              </a>
            </li>
            <li
              key="14"
              onClick={[Function]}
            >
              <a>
                O
              </a>
            </li>
            <li
              key="15"
              onClick={[Function]}
            >
              <a>
                P
              </a>
            </li>
            <li
              key="16"
              onClick={[Function]}
            >
              <a>
                Q
              </a>
            </li>
            <li
              key="17"
              onClick={[Function]}
            >
              <a>
                R
              </a>
            </li>
            <li
              key="18"
              onClick={[Function]}
            >
              <a>
                S
              </a>
            </li>
            <li
              key="19"
              onClick={[Function]}
            >
              <a>
                T
              </a>
            </li>
            <li
              key="20"
              onClick={[Function]}
            >
              <a>
                U
              </a>
            </li>
            <li
              key="21"
              onClick={[Function]}
            >
              <a>
                V
              </a>
            </li>
            <li
              key="22"
              onClick={[Function]}
            >
              <a>
                W
              </a>
            </li>
            <li
              key="23"
              onClick={[Function]}
            >
              <a>
                X
              </a>
            </li>
            <li
              key="24"
              onClick={[Function]}
            >
              <a>
                Y
              </a>
            </li>
            <li
              key="25"
              onClick={[Function]}
            >
              <a>
                Z
              </a>
            </li>
            <li
              onClick={[Function]}
            >
              <FontAwesome
                name="search"
              />
            </li>
          </ul>
        </div>
        <VelocityTransitionGroup
          enter={
            Object {
              "animation": "slideDown",
              "complete": [Function],
              "duration": 250,
            }
          }
          enterHideStyle={
            Object {
              "display": "none",
            }
          }
          enterShowStyle={
            Object {
              "display": "",
            }
          }
          leave={
            Object {
              "animation": "slideUp",
              "duration": 250,
            }
          }
          runOnMount={false}
        />
      </div>
      <div
        className="Artist"
        key="1"
      >
        <Link
          replace={false}
          to="/artist/abc"
        >
          <h2>
            ABC
          </h2>
          <p />
          <span
            className="icon"
          >
            <FontAwesome
              name="music"
            />
             
            2
            <FontAwesome
              className="spacer-left-xs"
              name="comment-o"
            />
             
            50
          </span>
        </Link>
      </div>
    </div>
  </Col>
</Row>
`;

exports[`<Artists /> renders first page 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={10}
  >
    <div
      className="Artists"
    >
      <PageHeader
        bsClass="page-header"
      >
        Artists 
        <small>
          (
          3
           
          Artists
          )
        </small>
      </PageHeader>
      <div>
        <div
          className="filters"
        >
          <ul
            className="pagination pagination-sm"
          >
            <li
              onClick={[Function]}
            >
              <a>
                All
              </a>
            </li>
            <li
              key="0"
              onClick={[Function]}
            >
              <a>
                A
              </a>
            </li>
            <li
              key="1"
              onClick={[Function]}
            >
              <a>
                B
              </a>
            </li>
            <li
              key="2"
              onClick={[Function]}
            >
              <a>
                C
              </a>
            </li>
            <li
              key="3"
              onClick={[Function]}
            >
              <a>
                D
              </a>
            </li>
            <li
              key="4"
              onClick={[Function]}
            >
              <a>
                E
              </a>
            </li>
            <li
              key="5"
              onClick={[Function]}
            >
              <a>
                F
              </a>
            </li>
            <li
              key="6"
              onClick={[Function]}
            >
              <a>
                G
              </a>
            </li>
            <li
              key="7"
              onClick={[Function]}
            >
              <a>
                H
              </a>
            </li>
            <li
              key="8"
              onClick={[Function]}
            >
              <a>
                I
              </a>
            </li>
            <li
              key="9"
              onClick={[Function]}
            >
              <a>
                J
              </a>
            </li>
            <li
              key="10"
              onClick={[Function]}
            >
              <a>
                K
              </a>
            </li>
            <li
              key="11"
              onClick={[Function]}
            >
              <a>
                L
              </a>
            </li>
            <li
              key="12"
              onClick={[Function]}
            >
              <a>
                M
              </a>
            </li>
            <li
              key="13"
              onClick={[Function]}
            >
              <a>
                N
              </a>
            </li>
            <li
              key="14"
              onClick={[Function]}
            >
              <a>
                O
              </a>
            </li>
            <li
              key="15"
              onClick={[Function]}
            >
              <a>
                P
              </a>
            </li>
            <li
              key="16"
              onClick={[Function]}
            >
              <a>
                Q
              </a>
            </li>
            <li
              key="17"
              onClick={[Function]}
            >
              <a>
                R
              </a>
            </li>
            <li
              key="18"
              onClick={[Function]}
            >
              <a>
                S
              </a>
            </li>
            <li
              key="19"
              onClick={[Function]}
            >
              <a>
                T
              </a>
            </li>
            <li
              key="20"
              onClick={[Function]}
            >
              <a>
                U
              </a>
            </li>
            <li
              key="21"
              onClick={[Function]}
            >
              <a>
                V
              </a>
            </li>
            <li
              key="22"
              onClick={[Function]}
            >
              <a>
                W
              </a>
            </li>
            <li
              key="23"
              onClick={[Function]}
            >
              <a>
                X
              </a>
            </li>
            <li
              key="24"
              onClick={[Function]}
            >
              <a>
                Y
              </a>
            </li>
            <li
              key="25"
              onClick={[Function]}
            >
              <a>
                Z
              </a>
            </li>
            <li
              onClick={[Function]}
            >
              <FontAwesome
                name="search"
              />
            </li>
          </ul>
        </div>
        <VelocityTransitionGroup
          enter={
            Object {
              "animation": "slideDown",
              "complete": [Function],
              "duration": 250,
            }
          }
          enterHideStyle={
            Object {
              "display": "none",
            }
          }
          enterShowStyle={
            Object {
              "display": "",
            }
          }
          leave={
            Object {
              "animation": "slideUp",
              "duration": 250,
            }
          }
          runOnMount={false}
        />
      </div>
      <div
        className="Artist"
        key="1"
      >
        <Link
          replace={false}
          to="/artist/abc"
        >
          <h2>
            ABC
          </h2>
          <p />
          <span
            className="icon"
          >
            <FontAwesome
              name="music"
            />
             
            2
            <FontAwesome
              className="spacer-left-xs"
              name="comment-o"
            />
             
            50
          </span>
        </Link>
      </div>
      <div
        className="Artist"
        key="2"
      >
        <Link
          replace={false}
          to="/artist/def"
        >
          <h2>
            DEF
          </h2>
          <p />
          <span
            className="icon"
          >
            <FontAwesome
              name="music"
            />
             
            4
            <FontAwesome
              className="spacer-left-xs"
              name="comment-o"
            />
             
            2
          </span>
        </Link>
      </div>
      <Paginator
        onPageChange={[Function]}
        pagination={
          Object {
            "current_page": 1,
            "next_page": 2,
            "prev_page": null,
            "total_count": 3,
            "total_pages": 2,
          }
        }
      />
    </div>
  </Col>
</Row>
`;

exports[`<Artists /> renders second page 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={10}
  >
    <div
      className="Artists"
    >
      <PageHeader
        bsClass="page-header"
      >
        Artists 
        <small>
          (
          3
           
          Artists
          )
        </small>
      </PageHeader>
      <div>
        <div
          className="filters"
        >
          <ul
            className="pagination pagination-sm"
          >
            <li
              onClick={[Function]}
            >
              <a>
                All
              </a>
            </li>
            <li
              key="0"
              onClick={[Function]}
            >
              <a>
                A
              </a>
            </li>
            <li
              key="1"
              onClick={[Function]}
            >
              <a>
                B
              </a>
            </li>
            <li
              key="2"
              onClick={[Function]}
            >
              <a>
                C
              </a>
            </li>
            <li
              key="3"
              onClick={[Function]}
            >
              <a>
                D
              </a>
            </li>
            <li
              key="4"
              onClick={[Function]}
            >
              <a>
                E
              </a>
            </li>
            <li
              key="5"
              onClick={[Function]}
            >
              <a>
                F
              </a>
            </li>
            <li
              key="6"
              onClick={[Function]}
            >
              <a>
                G
              </a>
            </li>
            <li
              key="7"
              onClick={[Function]}
            >
              <a>
                H
              </a>
            </li>
            <li
              key="8"
              onClick={[Function]}
            >
              <a>
                I
              </a>
            </li>
            <li
              key="9"
              onClick={[Function]}
            >
              <a>
                J
              </a>
            </li>
            <li
              key="10"
              onClick={[Function]}
            >
              <a>
                K
              </a>
            </li>
            <li
              key="11"
              onClick={[Function]}
            >
              <a>
                L
              </a>
            </li>
            <li
              key="12"
              onClick={[Function]}
            >
              <a>
                M
              </a>
            </li>
            <li
              key="13"
              onClick={[Function]}
            >
              <a>
                N
              </a>
            </li>
            <li
              key="14"
              onClick={[Function]}
            >
              <a>
                O
              </a>
            </li>
            <li
              key="15"
              onClick={[Function]}
            >
              <a>
                P
              </a>
            </li>
            <li
              key="16"
              onClick={[Function]}
            >
              <a>
                Q
              </a>
            </li>
            <li
              key="17"
              onClick={[Function]}
            >
              <a>
                R
              </a>
            </li>
            <li
              key="18"
              onClick={[Function]}
            >
              <a>
                S
              </a>
            </li>
            <li
              key="19"
              onClick={[Function]}
            >
              <a>
                T
              </a>
            </li>
            <li
              key="20"
              onClick={[Function]}
            >
              <a>
                U
              </a>
            </li>
            <li
              key="21"
              onClick={[Function]}
            >
              <a>
                V
              </a>
            </li>
            <li
              key="22"
              onClick={[Function]}
            >
              <a>
                W
              </a>
            </li>
            <li
              key="23"
              onClick={[Function]}
            >
              <a>
                X
              </a>
            </li>
            <li
              key="24"
              onClick={[Function]}
            >
              <a>
                Y
              </a>
            </li>
            <li
              key="25"
              onClick={[Function]}
            >
              <a>
                Z
              </a>
            </li>
            <li
              onClick={[Function]}
            >
              <FontAwesome
                name="search"
              />
            </li>
          </ul>
        </div>
        <VelocityTransitionGroup
          enter={
            Object {
              "animation": "slideDown",
              "complete": [Function],
              "duration": 250,
            }
          }
          enterHideStyle={
            Object {
              "display": "none",
            }
          }
          enterShowStyle={
            Object {
              "display": "",
            }
          }
          leave={
            Object {
              "animation": "slideUp",
              "duration": 250,
            }
          }
          runOnMount={false}
        />
      </div>
      <div
        className="Artist"
        key="3"
      >
        <Link
          replace={false}
          to="/artist/ghi"
        >
          <h2>
            GHI
          </h2>
          <p />
          <span
            className="icon"
          >
            <FontAwesome
              name="music"
            />
             
            7
            <FontAwesome
              className="spacer-left-xs"
              name="comment-o"
            />
             
            23
          </span>
        </Link>
      </div>
      <Paginator
        onPageChange={[Function]}
        pagination={
          Object {
            "current_page": 2,
            "next_page": null,
            "prev_page": 1,
            "total_count": 3,
            "total_pages": 2,
          }
        }
      />
    </div>
  </Col>
</Row>
`;
